--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!-- THIS BEGINS MY CONTENT SPACE -->
 <div class="grid-x grid-padding-x">
 <div class="large-4 medium-4 small-6 cell box1">
-<p><img src="watts.jpg"></p>
+<p><img src="images/watts.jpg"></p>
 <p style="font-size: small;">Shannan Watts and husband Chris Watts, Who Killed her and her two children (abc13.com)</p>
 </div>
   
